# swarmweaver

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  dev.mjs  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  setup.sh
.github/: pull_request_template.md
api/: __init__.py  app.py  helpers.py  models.py  state.py
cli/: __init__.py  client.py  config.py  main.py  output.py  wizard.py
core/: __init__.py  agent.py  agent_roles.py  client.py  context_manager.py  dispatch_overrides.py  engine.py  merge_queue.py  merge_resolver.py  models.py  orchestrator.py  orchestrator_tools.py  paths.py  prompts.py  quality_gates.py  sdk_tools.py  smart_orchestrator.py  swarm.py  worker_tools.py  worktree.py
docs/: README.md  architecture.md  cli-reference.md  configuration.md  getting-started.md  lsp.md  mail.md  mels.md  overview.md  security.md  session-history.md  swarm.md  watchdog.md  web-ui.md
features/: __init__.py  approval.py  context_primer.py  github_integration.py  memory.py  notifications.py  plugins.py  project_expertise.py  skills.py  spec_workflow.py  steering.py  task_tracker.py  verification.py
frontend/: .eslintrc.json  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
hooks/: __init__.py  capability_hooks.py  lsp_hooks.py  main_hooks.py  marathon_hooks.py  security.py
prompts/: app_spec.txt  coding_prompt.md  initializer_prompt.md
scripts/: cleanup_artifacts.py  cleanup_processes.py  init_memory.py
(+311 files in other folders)
