[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarmweaver"
version = "1.0.0"
description = "Autonomous Coding Agent - Multi-Mode AI agent for software development"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "claude-agent-sdk>=0.1.46",
    "python-dotenv>=1.0.0",
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "typer>=0.12",
    "rich>=13.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
swarmweaver = "cli.main:app"

[tool.setuptools.packages.find]
include = [
    "cli*",
    "api*",
    "core*",
    "state*",
    "features*",
    "services*",
    "hooks*",
    "utils*",
]
